--- a/구매후기/templates/posts/posts.html
+++ b/구매후기/templates/posts/posts.html
@@ -4,24 +4,84 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <title>게시판</title>
 </head>
-<body>
-    <h1>제품 후기</h1>
+
+<body style = "position: relative; left: 7%; width:86%"> 
+  
+  <br>
+  <div class="navbar">
+        
+  </div>
+  <br>
 
     {% for post in posts %}
-        {{ post.content }}<br>
-        {% if post.photo %}
-            <img src="{{ post.photo.url }}" alt=""><br>
-        {% endif %}
-        {{ post.created_at }}<br>
-        {{ post.rating }}<br>
-        <a href="{% url 'posts:post_update' post.pk %}">수정</a>
-        <a href="{% url 'posts:post_delete' post.pk %}">삭제</a>
-        <hr>
+      
+      {% if post.rating == "★★★★★" %}
+        <p class="star">★★★★★</p>
+      {% elif post.rating == "★★★★☆" %}
+        <p class="star">★★★★☆</p>
+      {% elif post.rating == "★★★☆☆" %}
+        <p class="star">★★★☆☆</p>
+      {% elif post.rating == "★★☆☆☆" %}
+        <p class="star">★★☆☆☆</p>
+      {% elif post.rating == "★☆☆☆☆" %}
+        <p class="star">★☆☆☆☆</p>
+      {% else %}
+        <p>데이터를 제대로 받지 못함</p>
+      {% endif %}
+      
+      <small>{{ post.created_at }}<br></small><br>
+      {% if post.photo %}
+        <a href="{% url 'posts:photo_show' post.pk %}"><img src="{{ post.photo_thumbnail.url }}" alt=""></a><br>
+      {% endif %}
+      {{ post.content }}<br>
+      <a href="{% url 'posts:post_update' post.pk %}"><button type="button" class="btn btn-primary btn-sm">수정</button></a>
+      <a href="{% url 'posts:post_delete' post.pk %}"><button type="button" class="btn btn-primary btn-sm">삭제</button></a>
+      <hr>
     {% endfor %}
 
-        
 
 </body>
 </html>
+<style>
+    body {font-family: Arial, Helvetica, sans-serif;}
+    
+    .navbar {
+      width: 100%;
+      background-color: #555;
+      overflow: auto;
+    }
+    
+    .navbar a {
+      float: left;
+      padding: 12px;
+      color: white;
+      text-decoration: none;
+      font-size: 17px;
+    }
+    
+    .navbar a:hover {
+      background-color: #000;
+    }
+    
+    .active {
+      background-color: #4CAF50;
+    }
+    
+    @media screen and (max-width: 500px) {
+      .navbar a {
+        float: none;
+        display: block;
+      }
+    }
+
+    p.star {
+      font-size: 20px
+    }
+    </style>
