(200917) * 게시판, 후기 작성 템플릿 * 삭제 쿠션 템플릿 생성
* 앞으로 task
** 후기 작성 템플릿에서 별점 드롭다운에 별 모양, 어떻게 css 입힐까?
** Content 작성 박스 크게 만들기
** 기타 세세한 템플릿

--- a/구매후기/templates/posts/cushion_delete.html
+++ b/구매후기/templates/posts/cushion_delete.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>원본 사진</title>
+    <title>Cushion</title>
 </head>
 <body style = "position: relative; left: 7%; width:86%">
-    
-    <img src="{{ post.photo.url }}" alt=""><br>
-
+    정말로 삭제하시겠습니까?<br>
+    <a href="{% url 'posts:post_delete' post.pk %}">예</a>
+    <a href="{% url 'posts:posts' %}">아니오</a>
 </body>
 </html>
